--- a/login_new.html
+++ b/login_new.html
@@ -52,7 +52,7 @@
         background: #fafafb;
         min-height: 100vh;
         font-family: 'Open Sans', sans-serif;
-        padding-top: 80px;
+        padding-top: 0;
       }
       .menu {
         background: #f5d76e;
@@ -76,7 +76,7 @@
         color: #273342;
       }
       .login-container {
-        padding: 80px 0;
+        padding: 20px 0;
         background: #fafafb;
       }
       .login-box {
