--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
         background: #fafafb;
         min-height: 100vh;
         font-family: 'Open Sans', sans-serif;
-        padding-top: 80px;
+        padding-top: 0;
       }
       .menu {
         background: #f5d76e;
@@ -71,7 +71,7 @@
         color: #273342;
       }
       .register-container {
-        padding: 80px 0;
+        padding: 20px 0;
         background: #fafafb;
       }
       .register-box {
