--- a/profile.html
+++ b/profile.html
@@ -100,6 +100,7 @@
         color: white;
         position: relative;
         overflow: hidden;
+        word-wrap: break-word;
       }
       .profile-header::before {
         content: '';
@@ -146,6 +147,10 @@
         margin: 0;
         position: relative;
         z-index: 1;
+        word-break: break-word;
+        overflow-wrap: break-word;
+        padding: 0 20px;
+        max-width: 100%;
       }
       .profile-body {
         padding: 50px 40px;
@@ -162,6 +167,8 @@
         border-radius: 15px;
         border-left: 4px solid #667eea;
         transition: all 0.3s;
+        overflow-wrap: break-word;
+        word-break: break-word;
       }
       .info-card:hover {
         transform: translateY(-5px);
@@ -194,6 +201,9 @@
         font-size: 1.2em;
         margin: 0;
         font-weight: 600;
+        word-break: break-word;
+        overflow-wrap: break-word;
+        max-width: 100%;
       }
       .account-status {
         background: linear-gradient(135deg, #f5d76e 0%, #f4c430 100%);
@@ -270,11 +280,21 @@
         .profile-header {
           padding: 40px 20px;
         }
+        .profile-header h1 {
+          font-size: 1.8em;
+        }
+        .profile-header p {
+          font-size: 1em;
+          padding: 0 10px;
+        }
         .profile-body {
           padding: 30px 20px;
         }
         .profile-info-grid {
           grid-template-columns: 1fr;
+        }
+        .info-card p {
+          font-size: 1em;
         }
       }
       /* Logout Confirmation Modal */
