--- a/login_new.html
+++ b/login_new.html
@@ -58,9 +58,13 @@
         background: #f5d76e;
         padding: 0;
         margin-top: 0;
+        position: relative;
+        z-index: 1000;
       }
       .navbar-wrapper {
         background: #f5d76e;
+        position: relative;
+        z-index: 1000;
       }
       /* Fix header hover/active styling */
       .navbar.navbar-inverse.navbar-static-top a:hover,
@@ -76,8 +80,10 @@
         color: #273342;
       }
       .login-container {
-        padding: 20px 0;
+        padding: 40px 15px;
         background: #fafafb;
+        margin-top: 80px;
+        min-height: calc(100vh - 80px);
       }
       .login-box {
         background: white;
@@ -86,11 +92,47 @@
         padding: 50px 40px;
         max-width: 450px;
         margin: 0 auto;
+        border: 2px solid #e0e0e0;
         border-top: 4px solid #f5d76e;
+      }
+      
+      @media (max-width: 768px) {
+        .login-container {
+          padding: 30px 15px;
+          margin-top: 70px;
+        }
+        .login-box {
+          padding: 30px 25px;
+          max-width: 100%;
+          border: 2px solid #e0e0e0;
+        }
+        .login-header h2 {
+          font-size: 2em !important;
+        }
+        .login-header {
+          margin-top: 10px;
+          padding-top: 10px;
+        }
+      }
+      
+      @media (max-width: 480px) {
+        .login-container {
+          padding: 20px 10px;
+          margin-top: 60px;
+        }
+        .login-box {
+          padding: 25px 20px;
+          border: 2px solid #e0e0e0;
+        }
+        .login-header h2 {
+          font-size: 1.8em !important;
+        }
       }
       .login-header {
         text-align: center;
         margin-bottom: 35px;
+        margin-top: 30px;
+        padding-top: 20px;
       }
       .login-header h2 {
         color: #273342;
