--- a/Admin.html
+++ b/Admin.html
@@ -275,14 +275,21 @@
       }
 
       /* Stack the header elements */
-      .container>div {
-        flex-direction: column;
-        gap: 10px;
+      .dashboard-header {
+        flex-direction: column !important;
         align-items: flex-start !important;
+        gap: 15px;
+      }
+
+      .user-controls {
+        flex-direction: column;
+        align-items: flex-start !important;
+        width: 100%;
+        gap: 10px;
       }
 
       .logo {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
       }
 
       /* Make tables scrollable */
