--- a/Admin.html
+++ b/Admin.html
@@ -263,6 +263,20 @@
       color: var(--muted);
     }
 
+    .dashboard-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .user-controls {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      flex-wrap: wrap;
+    }
+
     /* Mobile Responsiveness */
     @media (max-width: 768px) {
       .container {
@@ -276,20 +290,48 @@
 
       /* Stack the header elements */
       .dashboard-header {
-        flex-direction: column !important;
-        align-items: flex-start !important;
-        gap: 15px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0;
+        /* Reset gap, use margins */
+        flex-wrap: nowrap;
+        height: auto;
+        padding-bottom: 10px;
       }
 
       .user-controls {
         flex-direction: column;
-        align-items: flex-start !important;
+        align-items: center;
         width: 100%;
-        gap: 10px;
+        gap: 15px;
+        flex-wrap: nowrap;
+        margin-top: 20px;
+        order: 2 !important;
+        /* Force below logo */
+      }
+
+      .user-controls button {
+        width: 100%;
+        /* Full width buttons */
+        max-width: 300px;
+      }
+
+      .user-controls span {
+        display: block;
+        width: 100%;
+        word-break: break-word;
+        margin-bottom: 5px;
+        font-size: 0.9em;
       }
 
       .logo {
-        margin-bottom: 5px;
+        margin-bottom: 15px;
+        width: 100%;
+        text-align: center;
+        display: block;
+        order: 1 !important;
+        /* Force to top */
       }
 
       /* Make tables scrollable */
@@ -546,10 +588,9 @@
 
       return `
           <div style="background: var(--primary); color: white; padding: 15px 0; margin-bottom: 30px;">
-            <div class="container dashboard-header" style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+            <div class="container dashboard-header">
               <div class="logo">Success Planet <span style="font-size: 0.6em; background: var(--accent); color: #333; padding: 2px 6px; border-radius: 4px;">ADMIN</span></div>
-              <div class="user-controls" style="display:flex; align-items:center; gap:15px; flex-wrap: wrap;">
-                <span>Welcome, ${currentUser.email || "Admin"}</span>
+              <div class="user-controls">
                 ${isSuperAdmin ? `<button class="btn btn-sm btn-custom" onclick="openCreateAdminModal()"><i class="fa fa-plus"></i> Create Admin</button>` : ''}
                 <button class="btn btn-sm btn-danger-custom" onclick="logout()">Logout</button>
               </div>
