--- a/index.html
+++ b/index.html
@@ -43,6 +43,83 @@
       transition: color 0.3s;
     }
 
+    /* Mobile Navbar Fixes */
+    @media (max-width: 768px) {
+      /* Logo alignment fix - keep text on one line */
+      .logo {
+        display: flex !important;
+        align-items: center;
+        float: none !important;
+        margin: 0 !important;
+        padding: 10px 0;
+      }
+
+      .logo a {
+        display: flex !important;
+        align-items: center;
+        white-space: nowrap;
+        font-size: 28px !important;
+      }
+
+      .logo a span.img-circle {
+        width: 45px !important;
+        height: 45px !important;
+        font-size: 40px !important;
+        line-height: 40px !important;
+        margin-right: 5px !important;
+        flex-shrink: 0;
+      }
+
+      /* Remove default border/highlight from nav items */
+      .navbar-nav > li > a,
+      .navbar-inverse .navbar-nav > li > a,
+      .navbar-inverse .navbar-nav > .active > a,
+      .navbar-inverse .navbar-nav > .active > a:hover,
+      .navbar-inverse .navbar-nav > .active > a:focus,
+      .navbar.navbar-inverse.navbar-static-top a {
+        border: none !important;
+        border-bottom: none !important;
+        background: transparent !important;
+      }
+
+      /* Only show border on actual hover */
+      .navbar-nav > li > a:hover,
+      .navbar-nav > li > a:focus {
+        background: rgba(255, 255, 255, 0.1) !important;
+      }
+
+      /* Fix navbar collapse styling */
+      .navbar-collapse {
+        background: #3d3d68 !important;
+        border: none !important;
+        box-shadow: none !important;
+        margin: 0 -15px;
+        padding: 0 15px;
+      }
+
+      .navbar-nav {
+        margin: 10px 0 !important;
+        text-align: center !important;
+      }
+
+      .navbar-nav > li {
+        display: block !important;
+        float: none !important;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+      }
+
+      .navbar-nav > li:last-child {
+        border-bottom: none !important;
+      }
+
+      .navbar-nav > li > a {
+        padding: 15px 15px !important;
+        display: block !important;
+        color: #fff !important;
+        border: none !important;
+      }
+    }
+
     .heading h1 {
       font-size: 2.5em;
       margin-bottom: 20px;
@@ -1183,7 +1260,8 @@
                         <li class="menuItem" id="loginMenuItem">
                           <a href="login_new.html">Login</a>
                         </li>
-                        <a href="Admin.html" class="smooth">Admin</a>
+                        <li class="menuItem">
+                          <a href="Admin.html">Admin</a>
                         </li>
                         <li class="menuItem" id="registerMenuItem">
                           <a href="register.html">Register</a>
