--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       .navbar-nav > li {
         display: block !important;
         float: none !important;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+        border-bottom: 1px solid #4caf50 !important;
       }
 
       .navbar-nav > li:last-child {
